Details
-
Bug
-
Status: Resolved
-
Blocker
-
Resolution: Fixed
-
Impala 2.6.0
Description
Impala seems to be leaking memory in the stress test. I've noticed that the allocated memory has been gradually creeping up. One of the daemons is now sitting at this while no queries are running:
MALLOC: 14364384496 (13698.9 MiB) Bytes in use by application
Whereas it was a couple of gigabytes lower an hour or two ago.
Attachments
Attachments
Issue Links
- is duplicated by
-
IMPALA-3589 impala query exception cause some instance not free memery then memery used over 100G , then always mem_limit error
-
- Resolved
-