CLDR Patch 8: IMPALA-3582: THRIFT-2021 string buffer memory