lib/cpp/src/thrift/protocol/TBinaryProtocol.h
@@ -47,9 +47,7 @@ class TBinaryProtocolT
     string_limit_(0),
     container_limit_(0),
     strict_read_(false),
-    strict_write_(true),
-    string_buf_(NULL),
-    string_buf_size_(0) {}
+    strict_write_(true) {}
 
   TBinaryProtocolT(boost::shared_ptr<Transport_> trans,
                    int32_t string_limit,
@@ -61,15 +59,9 @@ class TBinaryProtocolT
     string_limit_(string_limit),
     container_limit_(container_limit),
     strict_read_(strict_read),
-    strict_write_(strict_write),
-    string_buf_(NULL),
-    string_buf_size_(0) {}
+    strict_write_(strict_write) {}
 
   ~TBinaryProtocolT() {
-    if (string_buf_ != NULL) {
-      std::free(string_buf_);
-      string_buf_size_ = 0;
-    }
   }
 
   void setStringSizeLimit(int32_t string_limit) {
@@ -205,11 +197,6 @@ class TBinaryProtocolT
   // Enforce presence of version identifier
   bool strict_read_;
   bool strict_write_;
-
-  // Buffer for reading strings, save for the lifetime of the protocol to
-  // avoid memory churn allocating memory on every string read
-  uint8_t* string_buf_;
-  int32_t string_buf_size_;
 
 };
 
