lib/cpp/src/thrift/protocol/TBinaryProtocol.tcc
@@ -446,17 +446,11 @@ uint32_t TBinaryProtocolT<Transport_>::readStringBody(StrType& str,
     return size;
   }
 
-  // Use the heap here to prevent stack overflow for v. large strings
-  if (size > this->string_buf_size_ || this->string_buf_ == NULL) {
-    void* new_string_buf = std::realloc(this->string_buf_, (uint32_t)size);
-    if (new_string_buf == NULL) {
-      throw std::bad_alloc();
-    }
-    this->string_buf_ = (uint8_t*)new_string_buf;
-    this->string_buf_size_ = size;
-  }
-  this->trans_->readAll(this->string_buf_, size);
-  str.assign((char*)this->string_buf_, size);
+  // In this case we can't borrow buffer memory for the string. We need to allocate more
+  // memory. Let's resize the string and write directly into the string memory to avoid
+  // the extra memcpy().
+  str.resize((uint32_t)size);
+  this->trans_->readAll((uint8_t*)&str[0], size);
   return (uint32_t)size;
 }
 
